pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  labels:
    app: demo-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.18-alpine
    ports:
    - containerPort: 80
