ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
  - host: foo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo
          servicePort: http
